# GrowHub_MultiCloud_continuum

./: .gitignore  README.md
ansible/: ansible.cfg  inventory.ini  karmada.yml  main.yml  prometheus.yml  requirements.yml
ansible/group_vars/: all.yml
ansible/inventories/private_cluster/: hosts.yml
ansible/playbooks/: private_cluster.yml
app/: app.md
app/growhub/: README.md  pubspec.yaml
app/growhub/lib/: main.dart
app/growhub/test/: widget_test.dart
app/growhub/web/: index.html
charts/: sensor_readings.m  sensors_readings.csv
device/esp/: CMakeLists.txt
device/esp/components/: CMakeLists.txt  http_client.c  http_client.h  pump_control.c  pump_control.h  sensor_reader.c  sensor_reader.h
device/esp/main/: CMakeLists.txt  hello_world_main.c  main.c
device/template-app/: CMakeLists.txt
device/template-app/main/: CMakeLists.txt  main.c
server/: .docker-compose.yml.swp  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyvenv.cfg
server/apps/postgres/: postmaster.pid
server/flask-app/: app.py  app_server.py  config.py  models.py
server/flask-app/swagger_templates/: add_user_device_ssid.yml  get_configuration.yml  get_sensor_readings.yml  get_user_devices.yml  update_devices.yml
server/flask-app/templates/: base.html  index.html
server/flask-app/urls/: api.py  auth.py
server/flask-device/: .gitignore  Dockerfile  alert_enum.py  app.py  config.py  device_default_values.py  device_server.py  endpoints.py  models.py  requirements.txt
server/flask-device/swagger_templates/: add_device.yml  add_dosage.yml  add_fertilizing_device.yml  (+5 more)
(+165 files in other folders)
